--- a/style.css
+++ b/style.css
@@ -4,3 +4,14 @@
     height: 50px;
     border-radius: 50%;
   }
+  .eyeicon{
+    vertical-align: middle;
+    width: 20px;
+    height: 20px;
+  }
+
+  .eyeico{
+    vertical-align: middle;
+    width: 150px;
+    
+  }
